grammar.js
    program: ($) =>
      choice(
        seq(
          optional(field("leading", $.linebreak)),
          optional($._horizontal_layout),
          field("commands", $.complete_commands),
          optional(field("trailing", $.linebreak)),
          optional($._free_trailing_layout),
        ),
        seq(
          optional(field("leading", $.linebreak)),
          optional($._horizontal_layout),
          optional(trailingComment($)),
        ),
      ),

    _quoted_here_document_end_text_lexeme: ($) =>
      lexical($, $._quoted_here_document_end_text_begin),

    _quoted_here_document_text_lexeme: ($) =>
      lexical($, $._quoted_here_document_text_begin),

    _assignment_name_lexeme: ($) => lexical($, $._assignment_name_begin),

    complete_commands: ($) =>
      seq(
        field("command", $.complete_command),
        repeat(
          seq(
            choice(
              field(
                "separator",
                alias($._separator_led_newline_list, $.newline_list),
              ),
              seq($._term_continuation, field("separator", $.newline_list)),
              field(
                "separator",
                alias($._here_document_led_newline_list, $.newline_list),
              ),
            ),
            optional($._horizontal_layout),
            field("command", $.complete_command),
          ),
        ),
        optional($._term_boundary),
      ),

    complete_command: ($) =>
      seq(
        field("body", $.list),
        optional(
          choice(
            seq(
              $._terminator_ahead,
              optional($._horizontal_layout),
              field("terminator", $.separator_op),
            ),
            $._term_boundary,
          ),
        ),
      ),

    list: ($) =>
      seq(
        field("and_or", $.and_or),
        repeat(
          seq(
            $._list_continuation,
            optional($._horizontal_layout),
            field("separator", $.separator_op),
            optional($._horizontal_layout),
            field("and_or", $.and_or),
          ),
        ),
      ),

    and_or: ($) =>
      seq(
        field("pipeline", $.pipeline),
        repeat(
          seq(
            $._and_or_continuation,
            optional($._horizontal_layout),
            field("operator", choice($._and_if, $._or_if)),
            linebreakLayout($),
            field("pipeline", $.pipeline),
          ),
        ),
      ),

    pipeline: ($) =>
      seq(
        optional(
          seq(field("negation", $.bang), optional($._horizontal_layout)),
        ),
        field("sequence", $.pipe_sequence),
      ),

    pipe_sequence: ($) =>
      seq(
        field("command", $.command),
        repeat(
          seq(
            $._pipe_continuation,
            optional($._horizontal_layout),
            physical($, $._punct_pipe, "|"),
            linebreakLayout($),
            field("command", $.command),
          ),
        ),
      ),

    command: ($) =>
      choice(
        field("body", $.simple_command),
        $._redirectable_compound_command,
        field("body", $.function_definition),
      ),

    _redirectable_compound_command: ($) => redirectableCompoundCommand($),

    separator_op: ($) =>
      choice(
        physical($, $._punct_ampersand, "&"),
        physical($, $._punct_semicolon, ";"),
      ),

    _operator_separator: ($) =>
      separatorOperatorLayout($, field("operator", $.separator_op)),

    _newline_separator: ($) => field("newlines", $.newline_list),

    _separator_led_newline_separator: ($) =>
      field("newlines", alias($._separator_led_newline_list, $.newline_list)),

    _here_document_led_separator: ($) =>
      field(
        "newlines",
        alias($._here_document_led_newline_list, $.newline_list),
      ),

    _here_document_led_operator_separator: ($) =>
      seq(
        field("operator", $.separator_op),
        field("linebreak", alias($._here_document_led_linebreak, $.linebreak)),
      ),

    term: ($) =>
      seq(
        field("and_or", $.and_or),
        repeat(
          seq(
            choice(
              field(
                "separator",
                alias($._separator_led_newline_separator, $.separator),
              ),
              seq(
                $._term_continuation,
                choice(
                  seq(
                    optional($._horizontal_layout),
                    field(
                      "separator",
                      alias($._operator_separator, $.separator),
                    ),
                  ),
                  field("separator", alias($._newline_separator, $.separator)),
                ),
              ),
              seq(
                optional($._closing_layout),
                field(
                  "separator",
                  alias($._here_document_led_operator_separator, $.separator),
                ),
              ),
              field(
                "separator",
                alias($._here_document_led_separator, $.separator),
              ),
            ),
            optional($._horizontal_layout),
            field("and_or", $.and_or),
          ),
        ),
        optional($._term_boundary),
      ),

    compound_list: ($) =>
      seq(
        optional(field("leading", $.linebreak)),
        optional($._horizontal_layout),
        field("body", $.term),
        optional(
          choice(
            seq(
              optional(
                seq($._terminator_ahead, optional($._horizontal_layout)),
              ),
              field("terminator", alias($._operator_separator, $.separator)),
            ),
            field("terminator", alias($._newline_separator, $.separator)),
          ),
        ),
      ),

    _and_if: ($) => alias($._and_if_lexeme, $.and_if),
    _or_if: ($) => alias($._or_if_lexeme, $.or_if),
    _in_keyword_source: ($) => alias($._in_keyword_lexeme, $.in_keyword),
    _case_keyword_source: ($) => alias($._case_keyword_lexeme, $.case_keyword),
    function_definition: ($) => functionDefinitionWithBody($, $.function_body),

    function_body: ($) => $._redirectable_compound_command,

    fname: ($) => lexical($, $._fname_begin),
    compound_command: ($) =>
      choice(
        $.brace_group,
        $.subshell,
        $.for_clause,
        $.case_clause,
        $.if_clause,
        $.while_clause,
        $.until_clause,
      ),

    brace_group: ($) =>
      seq(
        physical($, $._left_brace, "{"),
        compoundListField($, "body"),
        optional($._closing_layout),
        physical($, $._right_brace, "}"),
      ),

    in: ($) => $._in_keyword_source,

    if_clause: ($) => prec.right(ifClause($)),

    case_clause: ($) =>
      seq(
        $._case_keyword_source,
        $._word_separator,
        field("word", $.word),
        reservedWordLinebreak($),
        field("in", $.in),
        linebreakLayout($),
        caseClauseItems($),
      ),

    case_list_ns: ($) =>
      choice(
        field("item", $.case_item_ns),
        seq(field("terminated", $.case_list), field("item", $.case_item_ns)),
      ),

    case_list: ($) => repeat1(field("item", $.case_item)),

    case_item_ns: ($) =>
      seq(
        field("patterns", $.pattern_list),
        $._pattern_end,
        optional($._horizontal_layout),
        physical($, $._punct_right_parenthesis, ")"),
        choice(
          seq(optional($.linebreak), optional($._horizontal_layout)),
          prec.dynamic(
            10,
            seq(field("body", $.compound_list), optional($._closing_layout)),
          ),
        ),
      ),

    case_item: ($) =>
      seq(
        field("patterns", $.pattern_list),
        $._pattern_end,
        optional($._horizontal_layout),
        physical($, $._punct_right_parenthesis, ")"),
        choice(
          linebreakLayout($),
          prec.dynamic(10, field("body", $.compound_list)),
        ),
        seq($._case_item_end, optional($._horizontal_layout)),
        field("terminator", choice($._dsemi, $._semi_and)),
        optional(reservedWordLinebreak($)),
      ),

    pattern_list: ($) =>
      prec.dynamic(
        2,
        seq(
          optional(
            seq(
              physical($, $._punct_left_parenthesis, "("),
              optional($._horizontal_layout),
            ),
          ),
          field("word", $.word),
          repeat(
            seq(
              $._pattern_continuation,
              optional($._horizontal_layout),
              physical($, $._punct_pipe, "|"),
              optional($._horizontal_layout),
              field("word", $.word),
            ),
          ),
        ),
      ),
    _dsemi: ($) => alias($._dsemi_lexeme, $.dsemi),
    _semi_and: ($) => alias($._semi_and_lexeme, $.semi_and),
    simple_command: ($) =>
      choice(
        seq(
          field("prefix", $.cmd_prefix),
          optional(
            seq(
              $._word_separator,
              field("word", $.cmd_word),
              optional(field("suffix", $.cmd_suffix)),
            ),
          ),
        ),
        seq(field("name", $.cmd_name), optional(field("suffix", $.cmd_suffix))),
      ),

    cmd_prefix: ($) =>
      seq(
        choice(
          field("assignment", $.assignment_word),
          field("redirect", $.io_redirect),
        ),
        repeat(
          choice(
            seq(
              $._assignment_separator,
              field("assignment", $.assignment_word),
            ),
            ...commandRedirectContinuations($),
          ),
        ),
      ),

    cmd_name: ($) => $.word,

    cmd_suffix: ($) =>
      repeat1(
        choice(
          seq($._word_separator, field("word", $.word)),
          ...commandRedirectContinuations($),
        ),
      ),

    io_redirect: ($) =>
      choice(
        seq(
          field("number", $.io_number),
          field("body", choice($.io_file, $.io_here)),
        ),
        field("body", choice($.io_file, $.io_here)),
      ),
    io_number: ($) => lexical($, $._io_number_begin),
    io_file: ($) =>
      seq(
        choice(
          physical($, $._punct_less, "<", "operator"),
          physical($, $._punct_greater, ">", "operator"),
          field(
            "operator",
            choice($.lessand, $.greatand, $._dgreat, $.lessgreat, $.clobber),
          ),
        ),
        optional($._horizontal_layout),
        field("filename", $.filename),
      ),

    filename: ($) => field("word", $.word),

    _dgreat: ($) => alias($._dgreat_lexeme, $.dgreat),
    io_here: ($) =>
      seq(
        field("operator", choice($._dless, $._dlessdash)),
        optional($._horizontal_layout),
        field("end", $.here_end),
      ),

    _dless: ($) =>
      seq(alias($._dless_operator_lexeme, $.dless), $._dless_commit),
    _dlessdash: ($) =>
      seq(
        alias($._dlessdash_operator_lexeme, $.dlessdash),
        $._dlessdash_commit,
      ),
    here_end: ($) =>
      seq(
        $._here_end_begin,
        field("word", alias($._here_end_source_word, $.word)),
        $._here_end_commit,
      ),

    _here_end_source_word: ($) => seq($._word_begin, repeat1($._word_part)),
    here_document_sequence: ($) =>
      seq(
        optional(seq($._here_document_line_layout_begin, $._closing_layout)),
        optional(boundaryLineComment($, field("comment", $.comment))),
        field("line_end", $.here_document_line_end),
        repeat1(field("document", $.here_document)),
        $._here_document_sequence_end,
      ),
    here_document: ($) =>
      choice(
        seq(
          $._here_document_body_start,
          optional(field("body", $.here_document_body)),
          field("end", $.here_document_end),
        ),
        seq(
          $._quoted_here_document_body_start,
          optional(field("body", $.quoted_here_document_body)),
          field("end", $.here_document_end),
        ),
      ),

    here_document_end: ($) =>
      seq(
        choice(
          seq(
            $._quoted_here_document_end_begin,
            repeat(
              choice(
                $._here_document_end_leading_tabs,
                alias(
                  $._quoted_here_document_end_text_lexeme,
                  $.here_document_end_text,
                ),
              ),
            ),
          ),
          seq(
            $._here_document_end_begin,
            repeat(
              choice(
                $._here_document_end_leading_tabs,
                $.here_document_end_text,
              ),
            ),
          ),
        ),
        optional($._here_document_end_line_end),
        $._here_document_end_commit,
      ),

    _here_document_end_line_end: ($) =>
      lexical($, $._here_document_end_line_end_begin),

    here_document_end_text: ($) => lexical($, $._here_document_end_text_begin),

    here_document_body: ($) =>
      repeat1(
        choice(
          $.here_document_text,
          $.here_document_escape,
          $.parameter_expansion,
          $.command_substitution,
          $.arithmetic_expansion,
          $.backquote_substitution,
          $._newline,
        ),
      ),
    here_document_text: ($) => lexical($, $._here_document_text_begin),

    quoted_here_document_body: ($) =>
      repeat1(
        choice(
          alias(
            $._quoted_here_document_text_lexeme,
            $.quoted_here_document_text,
          ),
          $._newline,
        ),
      ),
    assignment_word: ($) =>
      prec.dynamic(
        ASSIGNMENT_WORD_PRECEDENCE,
        seq(
          field("name", alias($._assignment_name_lexeme, $.variable_name)),
          physical($, $._punct_equals, "="),
          optional(field("value", $.assignment_value)),
        ),
      ),
    variable_name: ($) => lexical($, $._variable_name_begin),
    assignment_value: ($) => $._assignment_source_word,

    _assignment_source_word: ($) =>
      repeat1(
        choice(
          alias($._assignment_tilde_expansion, $.tilde_expansion),
          $._assignment_word_part,
        ),
      ),

    word: ($) => $._source_word,

    _source_word: ($) =>
      seq(
        $._word_begin,
        choice(
          seq($.tilde_expansion, repeat($._word_part)),
          repeat1($._word_part),
        ),
      ),

    tilde_expansion: ($) =>
      tildeExpansion($, $._word_tilde_start, $.tilde_user, $._word_tilde_end),
    tilde_user: ($) => repeat1($._word_non_slash_part),
    _word_non_slash_part: ($) =>
      choice(
        $._word_bracket_fallback,
        $.pattern_bracket_source,
        $.literal,
        $.pattern_star_source,
        $.pattern_question_source,
        $._word_structured_part,
      ),

    literal: ($) => lexical($, $._literal_begin),

    ...fallbackRules("word"),
    ...fallbackRules("assignment"),
    ...fallbackRules("parameter"),
    escaped_character: ($) => lexical($, $._escaped_character_begin),
    single_quoted: ($) =>
      seq(
        physical($, $._sq_open, "'"),
        optional($.single_quote_content),
        physical($, $._sq_close, "'"),
      ),
    single_quote_content: ($) => lexical($, $._single_quote_content_begin),
    double_quoted: ($) =>
      seq(
        physical($, $._dq_open, '"'),
        repeat(doubleQuotedPart($)),
        physical($, $._dq_close, '"'),
      ),

    double_quote_text: ($) => lexical($, $._double_quote_text_begin),

    double_quote_escape: ($) => lexical($, $._double_quote_escape_begin),
    parameter_expansion: ($) =>
      parameterExpansion($, $._braced_parameter_expansion),

    _braced_parameter_expansion: ($) =>
      bracedParameterExpansion($, $._parameter_expansion_tail),

    command_substitution: ($) =>
      commandSubstitution($, $._command_or_arithmetic_substitution_start),

    _command_or_arithmetic_substitution_start: ($) =>
      $._command_substitution_start,
    command_substitution_body: ($) =>
      prec.left(substitutionCommandsBody($, $._closing_layout)),

    linebreak: ($) => $.newline_list,
