test/corpus/backquote_substitutions.txt
==================
backquote substitution exposes escapes and nested expansions
==================

echo `printf \`value\` ${name} $(other) \${escaped} \$(nested)`

---

(program
  leading: (linebreak
    (newline_list))
  commands: (complete_commands
    command: (complete_command
      body: (list
        and_or: (and_or
          pipeline: (pipeline
            sequence: (pipe_sequence
              command: (command
                body: (simple_command
                  name: (cmd_name
                    (word
                      (literal)))
                  suffix: (cmd_suffix
                    word: (word
                      (backquote_substitution
                        body: (backquote_substitution_body
                          (complete_commands
                            command: (complete_command
                              body: (list
                                and_or: (and_or
                                  pipeline: (pipeline
                                    sequence: (pipe_sequence
                                      command: (command
                                        body: (simple_command
                                          name: (cmd_name
                                            (word
                                              (literal)))
                                          suffix: (cmd_suffix
                                            word: (word
                                              (backquote_substitution
                                                body: (backquote_substitution_body
                                                  (complete_commands
                                                    command: (complete_command
                                                      body: (list
                                                        and_or: (and_or
                                                          pipeline: (pipeline
                                                            sequence: (pipe_sequence
                                                              command: (command
                                                                body: (simple_command
                                                                  name: (cmd_name
                                                                    (word
                                                                      (literal))))))))))))))
                                            word: (word
                                              (parameter_expansion
                                                parameter: (variable_name)))
                                            word: (word
                                              (command_substitution
                                                body: (command_substitution_body
                                                  (complete_commands
                                                    command: (complete_command
                                                      body: (list
                                                        and_or: (and_or
                                                          pipeline: (pipeline
                                                            sequence: (pipe_sequence
                                                              command: (command
                                                                body: (simple_command
                                                                  name: (cmd_name
                                                                    (word
                                                                      (literal))))))))))))))
                                            word: (word
                                              (parameter_expansion
                                                parameter: (variable_name)))
                                            word: (word
                                              (command_substitution
                                                body: (command_substitution_body
                                                  (complete_commands
                                                    command: (complete_command
                                                      body: (list
                                                        and_or: (and_or
                                                          pipeline: (pipeline
                                                            sequence: (pipe_sequence
                                                              command: (command
                                                                body: (simple_command
                                                                  name: (cmd_name
                                                                    (word
                                                                      (literal)))))))))))))))))))))))))))))))))))
  trailing: (linebreak
    (newline_list)))

==================
legacy backquotes preserve three nested substitutions
==================

echo `one \`two \\\`three\\\` two\` one`

---

(program
  (linebreak
    (newline_list))
  (complete_commands
    (complete_command
      (list
        (and_or
          (pipeline
            (pipe_sequence
              (command
                (simple_command
                  (cmd_name
                    (word
                      (literal)))
                  (cmd_suffix
                    (word
                      (backquote_substitution
                        (backquote_substitution_body
                          (complete_commands
                            (complete_command
                              (list
                                (and_or
                                  (pipeline
                                    (pipe_sequence
                                      (command
                                        (simple_command
                                          (cmd_name
                                            (word
                                              (literal)))
                                          (cmd_suffix
                                            (word
                                              (backquote_substitution
                                                (backquote_substitution_body
                                                  (complete_commands
                                                    (complete_command
                                                      (list
                                                        (and_or
                                                          (pipeline
                                                            (pipe_sequence
                                                              (command
                                                                (simple_command
                                                                  (cmd_name
                                                                    (word
                                                                      (literal)))
                                                                  (cmd_suffix
                                                                    (word
                                                                      (backquote_substitution
                                                                        (backquote_substitution_body
                                                                          (complete_commands
                                                                            (complete_command
                                                                              (list
                                                                                (and_or
                                                                                  (pipeline
                                                                                    (pipe_sequence
                                                                                      (command
                                                                                        (simple_command
                                                                                          (cmd_name
                                                                                            (word
                                                                                              (literal))))))))))))))
                                                                    (word
                                                                      (literal))))))))))))))
                                            (word
                                              (literal)))))))))))))))))))))))
  (linebreak
    (newline_list)))

==================
backquote quote removal follows the enclosing double-quote context
==================

echo "`printf %s \"a b\"`"
echo `printf %s \"a b\"`
echo "`echo \`printf %s \"a b\"\``"

---

(program
  leading: (linebreak
    (newline_list))
  commands: (complete_commands
    command: (complete_command
      body: (list
        and_or: (and_or
          pipeline: (pipeline
            sequence: (pipe_sequence
              command: (command
                body: (simple_command
                  name: (cmd_name
                    (word
                      (literal)))
                  suffix: (cmd_suffix
                    word: (word
                      (double_quoted
                        (backquote_substitution
                          body: (backquote_substitution_body
                            (complete_commands
                              command: (complete_command
                                body: (list
                                  and_or: (and_or
                                    pipeline: (pipeline
                                      sequence: (pipe_sequence
                                        command: (command
                                          body: (simple_command
                                            name: (cmd_name
                                              (word
                                                (literal)))
                                            suffix: (cmd_suffix
                                              word: (word
                                                (literal))
                                              word: (word
                                                (double_quoted
                                                  (double_quote_text))))))))))))))))))))))))
    separator: (newline_list)
    command: (complete_command
      body: (list
        and_or: (and_or
          pipeline: (pipeline
            sequence: (pipe_sequence
              command: (command
                body: (simple_command
                  name: (cmd_name
                    (word
                      (literal)))
                  suffix: (cmd_suffix
                    word: (word
                      (backquote_substitution
                        body: (backquote_substitution_body
                          (complete_commands
                            command: (complete_command
                              body: (list
                                and_or: (and_or
                                  pipeline: (pipeline
                                    sequence: (pipe_sequence
                                      command: (command
                                        body: (simple_command
                                          name: (cmd_name
                                            (word
                                              (literal)))
                                          suffix: (cmd_suffix
                                            word: (word
                                              (literal))
                                            word: (word
                                              (escaped_character)
                                              (literal))
                                            word: (word
                                              (literal)
                                              (escaped_character))))))))))))))))))))))
    separator: (newline_list)
    command: (complete_command
      body: (list
        and_or: (and_or
          pipeline: (pipeline
            sequence: (pipe_sequence
              command: (command
                body: (simple_command
                  name: (cmd_name
                    (word
                      (literal)))
                  suffix: (cmd_suffix
                    word: (word
                      (double_quoted
                        (backquote_substitution
                          body: (backquote_substitution_body
                            (complete_commands
                              command: (complete_command
                                body: (list
                                  and_or: (and_or
                                    pipeline: (pipeline
                                      sequence: (pipe_sequence
                                        command: (command
                                          body: (simple_command
                                            name: (cmd_name
                                              (word
                                                (literal)))
                                            suffix: (cmd_suffix
                                              word: (word
                                                (backquote_substitution
                                                  body: (backquote_substitution_body
                                                    (complete_commands
                                                      command: (complete_command
                                                        body: (list
                                                          and_or: (and_or
                                                            pipeline: (pipeline
                                                              sequence: (pipe_sequence
                                                                command: (command
                                                                  body: (simple_command
                                                                    name: (cmd_name
                                                                      (word
                                                                        (literal)))
                                                                    suffix: (cmd_suffix
                                                                      word: (word
                                                                        (literal))
                                                                      word: (word
                                                                        (double_quoted
                                                                          (double_quote_text)))))))))))))))))))))))))))))))))))))
  trailing: (linebreak
    (newline_list)))

==================
escape runs before ordinary characters fold through enclosing backquotes
==================

echo `printf %s \; a\\ b \\) "x\\"y" \\; :`
echo `echo \`printf %s \\\\\; :\``

---

(program
  (linebreak
    (newline_list))
  (complete_commands
    (complete_command
      (list
        (and_or
          (pipeline
            (pipe_sequence
              (command
                (simple_command
                  (cmd_name
                    (word
                      (literal)))
                  (cmd_suffix
                    (word
                      (backquote_substitution
                        (backquote_substitution_body
                          (complete_commands
                            (complete_command
                              (list
                                (and_or
                                  (pipeline
                                    (pipe_sequence
                                      (command
                                        (simple_command
                                          (cmd_name
                                            (word
                                              (literal)))
                                          (cmd_suffix
                                            (word
                                              (literal))
                                            (word
                                              (escaped_character))
                                            (word
                                              (literal)
                                              (escaped_character)
                                              (literal))
                                            (word
                                              (escaped_character))
                                            (word
                                              (double_quoted
                                                (double_quote_text)
                                                (double_quote_escape)
                                                (double_quote_text)))
                                            (word
                                              (escaped_character))
                                            (word
                                              (literal))))))))))))))))))))))
    (newline_list)
    (complete_command
      (list
        (and_or
          (pipeline
            (pipe_sequence
              (command
                (simple_command
                  (cmd_name
                    (word
                      (literal)))
                  (cmd_suffix
                    (word
                      (backquote_substitution
                        (backquote_substitution_body
                          (complete_commands
                            (complete_command
                              (list
                                (and_or
                                  (pipeline
                                    (pipe_sequence
                                      (command
                                        (simple_command
                                          (cmd_name
                                            (word
                                              (literal)))
                                          (cmd_suffix
                                            (word
                                              (backquote_substitution
                                                (backquote_substitution_body
                                                  (complete_commands
                                                    (complete_command
                                                      (list
                                                        (and_or
                                                          (pipeline
                                                            (pipe_sequence
                                                              (command
                                                                (simple_command
                                                                  (cmd_name
                                                                    (word
                                                                      (literal)))
                                                                  (cmd_suffix
                                                                    (word
                                                                      (literal))
                                                                    (word
                                                                      (escaped_character))))))))
                                                        (separator_op)
                                                        (and_or
                                                          (pipeline
                                                            (pipe_sequence
                                                              (command
                                                                (simple_command
                                                                  (cmd_name
                                                                    (word
                                                                      (literal)))))))))))))))))))))))))))))))))))
  (linebreak
    (newline_list)))

==================
a content escape run keeps the backquote literal at every level
==================

echo `echo \\\`date\\\``

---

(program
  (linebreak
    (newline_list))
  (complete_commands
    (complete_command
      (list
        (and_or
          (pipeline
            (pipe_sequence
              (command
                (simple_command
                  (cmd_name
                    (word
                      (literal)))
                  (cmd_suffix
                    (word
                      (backquote_substitution
                        (backquote_substitution_body
                          (complete_commands
                            (complete_command
                              (list
                                (and_or
                                  (pipeline
                                    (pipe_sequence
                                      (command
                                        (simple_command
                                          (cmd_name
                                            (word
                                              (literal)))
                                          (cmd_suffix
                                            (word
                                              (escaped_character)
                                              (literal)
                                              (escaped_character)))))))))))))))))))))))
  (linebreak
    (newline_list)))

==================
an odd content run keeps the dollar sign literal
==================

echo `echo \\\$x`

---

(program
  (linebreak
    (newline_list))
  (complete_commands
    (complete_command
      (list
        (and_or
          (pipeline
            (pipe_sequence
              (command
                (simple_command
                  (cmd_name
                    (word
                      (literal)))
                  (cmd_suffix
                    (word
                      (backquote_substitution
                        (backquote_substitution_body
                          (complete_commands
                            (complete_command
                              (list
                                (and_or
                                  (pipeline
                                    (pipe_sequence
                                      (command
                                        (simple_command
                                          (cmd_name
                                            (word
                                              (literal)))
                                          (cmd_suffix
                                            (word
                                              (escaped_character)
                                              (literal)))))))))))))))))))))))
  (linebreak
    (newline_list)))

==================
an even content run keeps the dollar sign literal
==================

echo `echo \\$x`

---

(program
  (linebreak
    (newline_list))
  (complete_commands
    (complete_command
      (list
        (and_or
          (pipeline
            (pipe_sequence
              (command
                (simple_command
                  (cmd_name
                    (word
                      (literal)))
                  (cmd_suffix
                    (word
                      (backquote_substitution
                        (backquote_substitution_body
                          (complete_commands
                            (complete_command
                              (list
                                (and_or
                                  (pipeline
                                    (pipe_sequence
                                      (command
                                        (simple_command
                                          (cmd_name
                                            (word
                                              (literal)))
                                          (cmd_suffix
                                            (word
                                              (escaped_character)
                                              (literal)))))))))))))))))))))))
  (linebreak
    (newline_list)))

==================
escaped pairs before a deferred dollar sign stay body content
==================

echo `echo \\\\\$x`

---

(program
  (linebreak
    (newline_list))
  (complete_commands
    (complete_command
      (list
        (and_or
          (pipeline
            (pipe_sequence
              (command
                (simple_command
                  (cmd_name
                    (word
                      (literal)))
                  (cmd_suffix
                    (word
                      (backquote_substitution
                        (backquote_substitution_body
                          (complete_commands
                            (complete_command
                              (list
                                (and_or
                                  (pipeline
                                    (pipe_sequence
                                      (command
                                        (simple_command
                                          (cmd_name
                                            (word
                                              (literal)))
                                          (cmd_suffix
                                            (word
                                              (escaped_character)
                                              (parameter_expansion
                                                (variable_name))))))))))))))))))))))))
  (linebreak
    (newline_list)))

==================
leading escaped pairs precede a nested closing spelling
==================

echo `a \`b \\\\\\\\\` c`

---

(program
  (linebreak
    (newline_list))
  (complete_commands
    (complete_command
      (list
        (and_or
          (pipeline
            (pipe_sequence
              (command
                (simple_command
                  (cmd_name
                    (word
                      (literal)))
                  (cmd_suffix
                    (word
                      (backquote_substitution
                        (backquote_substitution_body
                          (complete_commands
                            (complete_command
                              (list
                                (and_or
                                  (pipeline
                                    (pipe_sequence
                                      (command
                                        (simple_command
                                          (cmd_name
                                            (word
                                              (literal)))
                                          (cmd_suffix
                                            (word
                                              (backquote_substitution
                                                (backquote_substitution_body
                                                  (complete_commands
                                                    (complete_command
                                                      (list
                                                        (and_or
                                                          (pipeline
                                                            (pipe_sequence
                                                              (command
                                                                (simple_command
                                                                  (cmd_name
                                                                    (word
                                                                      (literal)))
                                                                  (cmd_suffix
                                                                    (word
                                                                      (escaped_character))))))))))))))
                                            (word
                                              (literal)))))))))))))))))))))))
  (linebreak
    (newline_list)))

==================
an escaped-backslash word precedes the closing backquote
==================

echo `p \\\\` end

---

(program
  leading: (linebreak
    (newline_list))
  commands: (complete_commands
    command: (complete_command
      body: (list
        and_or: (and_or
          pipeline: (pipeline
            sequence: (pipe_sequence
              command: (command
                body: (simple_command
                  name: (cmd_name
                    (word
                      (literal)))
                  suffix: (cmd_suffix
                    word: (word
                      (backquote_substitution
                        body: (backquote_substitution_body
                          (complete_commands
                            command: (complete_command
                              body: (list
                                and_or: (and_or
                                  pipeline: (pipeline
                                    sequence: (pipe_sequence
                                      command: (command
                                        body: (simple_command
                                          name: (cmd_name
                                            (word
                                              (literal)))
                                          suffix: (cmd_suffix
                                            word: (word
                                              (escaped_character))))))))))))))
                    word: (word
                      (literal)))))))))))
  trailing: (linebreak
    (newline_list)))

==================
a backquote closer ends a substitution at every command position
==================

x=`
foo
`
echo `a;`

---
